--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>this is index file</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam reiciendis tempore, dignissimos harum rerum quas dolorem sit eaque laborum, aliquam, tempora commodi nulla sint eveniet. Delectus aperiam temporibus optio aut.</p>
+    <button>save</button>
 </body>
 </html>
